--- a/index.html
+++ b/index.html
@@ -218,9 +218,16 @@
                     <ol>
                         <li>Click "Download Pong Force" above</li>
                         <li>Save the file to your computer</li>
+                        <li>If Windows Defender blocks it, see the guide below</li>
                         <li>Run the downloaded .exe file</li>
                         <li>Enjoy the game!</li>
                     </ol>
+                    <p><strong>🛡️ Windows Defender Fix:</strong></p>
+                    <div class="defender-warning">
+                        <p><strong>⚠️ Important:</strong> Windows Defender may show a warning about Pong Force. This is a <strong>false positive</strong> - the game is completely safe!</p>
+                        <p><strong>Quick Fix:</strong> Click "More info" → "Run anyway" when Windows Defender blocks the download.</p>
+                        <p><strong>Permanent Fix:</strong> Add the game folder to Windows Defender exclusions after installation.</p>
+                    </div>
                     <p><strong>🎮 System Requirements:</strong></p>
                     <ul>
                         <li>Windows 10/11 (64-bit)</li>
