--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             </div>
             <div class="features-grid">
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                    <div class="feature-icon">🎮</div>
-                    <h3>Real-time Multiplayer</h3>
-                    <p>Challenge friends in intense 2-player battles with smooth, responsive controls and competitive gameplay.</p>
+                    <div class="feature-icon">🌐</div>
+                    <h3>Online Multiplayer</h3>
+                    <p>Play with friends anywhere in the world! Host or join games online, compete in intense 1v1 battles with real-time synchronization.</p>
                 </div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="feature-icon">⚡</div>
@@ -190,13 +190,17 @@
             <div class="download-content">
                 <h2 class="download-title">Ready to Dominate?</h2>
                 <p class="download-description">
-                    Download Pong Force now and experience the ultimate Pong evolution with Force Push mechanics.
+                    Download Pong Force now and experience the ultimate Pong evolution with Force Push mechanics and online multiplayer!
                 </p>
                 <div class="download-info">
                     <div class="download-details">
                         <div class="detail-item">
                             <span class="detail-icon">📦</span>
                             <span class="detail-text">Windows Executable</span>
+                        </div>
+                        <div class="detail-item">
+                            <span class="detail-icon">🌐</span>
+                            <span class="detail-text">Online Multiplayer</span>
                         </div>
                         <div class="detail-item">
                             <span class="detail-icon">⚡</span>
