--- a/integration_test.html
+++ b/integration_test.html
@@ -111,7 +111,7 @@
         <h2 class="test-title">📦 Download Test</h2>
         <p>Test the game download functionality:</p>
         <div class="download-test">
-            <a href="assets/PongForceSetup.exe" class="download-btn" download>
+            <a href="assets/PongForce.exe" class="download-btn" download="PongForce.exe">
                 ⬇️ Download Pong Force Game
             </a>
         </div>
