--- a/test.html
+++ b/test.html
@@ -83,7 +83,7 @@
         <p>Test all website pages and functionality:</p>
         <a href="index.html" class="test-link">🏠 Homepage</a>
         <a href="demo.html" class="test-link">🎮 Demo Page</a>
-        <a href="assets/PongForceSetup.exe" class="test-link">📥 Download Test</a>
+        <a href="assets/PongForce.exe" class="test-link">📥 Download Test</a>
     </div>
 
     <div class="test-section">
