--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <span class="btn-text">Try Demo</span>
                         <span class="btn-glow"></span>
                     </a>
-                    <a href="assets/PongForce.exe" class="btn btn-download" id="download-btn" download>
+                    <a href="pong_force/dist/PongForce.exe" class="btn btn-download" id="download-btn" download>
                         <span class="btn-text">Download Now</span>
                         <span class="btn-glow"></span>
                     </a>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="assets/PongForce.exe" class="btn btn-download-large" download="PongForce.exe" id="download-game-btn">
+                <a href="pong_force/dist/PongForce.exe" class="btn btn-download-large" download="PongForce.exe" id="download-game-btn">
                     <span class="btn-text">Download Pong Force</span>
                     <span class="btn-glow"></span>
                     <span class="download-icon">⬇️</span>
