--- a/demo.html
+++ b/demo.html
@@ -390,7 +390,7 @@
             <div class="download-section" id="download">
                 <h3>Love the Demo?</h3>
                 <p>Download the full version of Pong Force with enhanced graphics, sound effects, and more features!</p>
-                <a href="assets/PongForce.exe" class="btn btn-download-large" download="PongForce.exe">
+                <a href="download/PongForce.exe" class="btn btn-download-large" download="PongForce.exe">
                     <span class="btn-text">Download Full Game</span>
                     <span class="btn-glow"></span>
                     <span class="download-icon">⬇️</span>
