--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <span class="btn-text">Try Demo</span>
                         <span class="btn-glow"></span>
                     </a>
-                    <a href="pong_force/dist/PongForce.exe" class="btn btn-download" id="download-btn" download>
+                    <a href="download/PongForce.exe" class="btn btn-download" id="download-btn" download>
                         <span class="btn-text">Download Now</span>
                         <span class="btn-glow"></span>
                     </a>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="pong_force/dist/PongForce.exe" class="btn btn-download-large" download="PongForce.exe" id="download-game-btn">
+                <a href="download/Pong[[2](https://www.google.com/url?sa=E&q=https%3A%2F%2Fvertexaisearch.cloud.google.com%2Fgrounding-api-redirect%2FAUZIYQHi54OZuJiN5YN6-nGpqAlkKzbtwcNbGQG0A-32hkXYt444tuC5ZRF22SxBTJB6V8XteDNQYgmiNbEHpN1TLpqSUIkVeHE41wt5QANNF2stQ5Gu5bAZRgpbLZaMD5UsZK-qgqlR23A%3D)][[3](https://www.google.com/url?sa=E&q=https%3A%2F%2Fvertexaisearch.cloud.google.com%2Fgrounding-api-redirect%2FAUZIYQFDfMe0YVO_QGwPdNNlC3Owyglm_CmlXs9OrUGUy3w027g7ygCJgiV3Q_IBZhE2Xw990yndqu1MlMr-DihFXntYF174rARWniVC3qBcJpk_U2-TprOs3YkWITE9ua4%3D)][[4](https://www.google.com/url?sa=E&q=https%3A%2F%2Fvertexaisearch.cloud.google.com%2Fgrounding-api-redirect%2FAUZIYQF_93yNoPhPCuxVq5FO7yaiSk29bifx5b9YnQzrwezfIjQ6oW5KsKVhW3s10Lq1byLK-bremnMjwqfWS2ubC_nxvyqcOxCbUG7lmyXBkZbVXk2jRY0vFWmUJMPq6u-y1yhriaQysVogItOazfSGrqX8xQg-fjHEhsWzU7wv7zzjBQU0E0cRpFClE4dARjOj3plKYGtjG3lqbA%3D%3D)]Force.exe" class="btn btn-download-large" download="PongForce.exe" id="download-game-btn">
                     <span class="btn-text">Download Pong Force</span>
                     <span class="btn-glow"></span>
                     <span class="download-icon">⬇️</span>
